style: fix too much hight

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -1,5 +1,5 @@
 .mainContainer {
-  padding-top: 80px;
+  padding-top: 6vh;
 }
 
 .container {
